<resources>
    <string name="app_name">MyWorkshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Workshop</string>
    <string name="nav_header_subtitle">myworkshop@apsolete.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_workshop">Workshop</string>
    <string name="menu_equipments">Equipments</string>

    <string name="menu_equipmenttypes">Equipment Types</string>
    <string name="title_equipmenttypes">Equipment Types</string>
    <string name="title_equipmenttype">Equipment Type</string>
    <string name="title_equipmenttype_id">ID</string>
    <string name="title_equipmenttype_name">Name</string>
    <string name="title_equipmenttype_descr">Description</string>

    <string name="menu_equipmentclasses">Equipment Classes</string>
    <string name="menu_equipmentkinds">Equipment Kinds</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_materials">Materials</string>
    <string name="menu_hardware">Hardware</string>
    <string name="menu_parameters">Parameters</string>
    <string name="menu_units">Units</string>


    <string name="title_home">Home</string>
    <string name="title_workshop">Workshop</string>
    <string name="title_equipment">Equipment</string>
    <string name="title_equipments">Equipments</string>

    <string name="title_equipmentclass">Eq.Class</string>
    <string name="title_equipmentclasses">Eq.Classes</string>
    <string name="title_equipmentkind">Eq.Kind</string>
    <string name="title_equipmentkinds">Eq.Kinds</string>
    <string name="title_parameter">Parameter</string>
    <string name="title_parameters">Parameters</string>
    <string name="title_unit">Unit</string>
    <string name="title_units">Units</string>
    <string name="title_tools">Tools</string>
    <string name="title_materials">Materials</string>
    <string name="title_hardware">Hardware</string>

    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
</resources>
