<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.apsolete.workshop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_workshop"
        android:name="com.apsolete.workshop.ui.workshop.WorkshopFragment"
        android:label="@string/menu_workshop"
        tools:layout="@layout/fragment_workshop" />

    <fragment
        android:id="@+id/nav_equipments"
        android:name="com.apsolete.workshop.ui.equipment.EquipmentsFragment"
        android:label="@string/menu_equipments"
        tools:layout="@layout/fragment_equipments" />

    <fragment
        android:id="@+id/nav_equipmenttypes"
        android:name="com.apsolete.workshop.ui.equipment.types.TypesFragment"
        android:label="@string/menu_equipmenttypes"
        tools:layout="@layout/fragment_equipmenttypes" />

    <fragment
        android:id="@+id/nav_equipmentclasses"
        android:name="com.apsolete.workshop.ui.equipment.classes.ClassesFragment"
        android:label="@string/menu_equipmentclasses"
        tools:layout="@layout/fragment_equipmentclasses" />

    <fragment
        android:id="@+id/nav_equipmentkinds"
        android:name="com.apsolete.workshop.ui.equipment.kinds.KindsFragment"
        android:label="@string/menu_equipmentkinds"
        tools:layout="@layout/fragment_equipmentkinds" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.apsolete.workshop.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_materials"
        android:name="com.apsolete.workshop.ui.materials.MaterialsFragment"
        android:label="@string/menu_materials"
        tools:layout="@layout/fragment_materials" />

    <fragment
        android:id="@+id/nav_hardware"
        android:name="com.apsolete.workshop.ui.hardware.HardwareFragment"
        android:label="@string/menu_hardware"
        tools:layout="@layout/fragment_hardware" />

    <fragment
        android:id="@+id/nav_parameters"
        android:name="com.apsolete.workshop.ui.equipment.params.ParametersFragment"
        android:label="@string/menu_parameters"
        tools:layout="@layout/fragment_parameters" />

    <fragment
        android:id="@+id/nav_units"
        android:name="com.apsolete.workshop.ui.equipment.params.UnitsFragment"
        android:label="@string/menu_units"
        tools:layout="@layout/fragment_units" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.apsolete.workshop.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>