<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_workshop"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_workshop" />
        <item
            android:title="@string/menu_equipments">
            <menu>
                <item
                    android:id="@+id/nav_equipmenttypes"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_entitytypes">
                </item>
                <item
                    android:id="@+id/nav_equipmentclasses"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_entityclasses">
                </item>
                <item
                    android:id="@+id/nav_equipments"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_equipments">
                </item>
            </menu>
        </item>
        <item
            android:id="@+id/nav_materials"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_materials" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_hardware"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_hardware" />
        <item
            android:id="@+id/nav_parameters"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_parameters" />
        <item
            android:id="@+id/nav_units"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_units" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
