<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.apsolete.myworkshop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_equipment"
        android:name="com.apsolete.myworkshop.ui.equipment.EquipmentFragment"
        android:label="@string/menu_equipment"
        tools:layout="@layout/fragment_equipment" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.apsolete.myworkshop.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_materials"
        android:name="com.apsolete.myworkshop.ui.materials.MaterialsFragment"
        android:label="@string/menu_materials"
        tools:layout="@layout/fragment_materials" />

    <fragment
        android:id="@+id/nav_hardware"
        android:name="com.apsolete.myworkshop.ui.hardware.HardwareFragment"
        android:label="@string/menu_hardware"
        tools:layout="@layout/fragment_hardware" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.apsolete.myworkshop.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>