<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_equipment_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/title_equipmenttype_id"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_equipmenttype_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/title_equipmenttype_name"
        android:inputType="none"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_equipment_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:hint="@string/title_equipmenttype_descr"
        android:inputType="none"
        android:autofillHints="" />

</LinearLayout>